--- a/hyprland/waybar/style.css
+++ b/hyprland/waybar/style.css
@@ -3,14 +3,14 @@
     border-radius: 0;
     min-height: 0;
     font-family: "Jetbrains Mono Nerd Font";
-    font-weight: 500;
+    font-weight: Bold;
     font-size: 16px;
     padding: 0;
 }
 
 window#waybar {
-    background: #1d2021;
-    border: 2px solid #3c3836;
+    background: #000000;
+    border: 0px solid #3c3836;
 }
 
 tooltip {
@@ -30,9 +30,9 @@ tooltip {
 }
 
 #workspaces {
-    background-color: #303536;
+    background-color: #000000;
     margin: 6px 0px 6px 6px;
-    border: 2px solid #434a4c;
+    border: 0px solid #434a4c;
 }
 
 #workspaces button {
@@ -40,11 +40,12 @@ tooltip {
     min-width: 0;
     box-shadow: inset 0 -3px transparent;
     padding: 0px 4px;
-    color: #458588;
+    color: #c3e88d;
 }
 
 #workspaces button.focused {
     color: #ddc7a1;
+    border-bottom: 3px solid #9ece6a;
 }
 
 #workspaces button.urgent {
@@ -52,9 +53,9 @@ tooltip {
 }
 
 #clock {
-    background-color: #303536;
-    border: 2px solid #434a4c;
-    color: #d79921;
+    background-color: #000000;
+    border: 0px solid #434a4c;
+    color: #ff9e64;
 }
 
 #tray {
@@ -72,9 +73,9 @@ tooltip {
 #memory,
 #network,
 #pulseaudio {
-    background-color: #303536;
-    border: 2px solid #434a4c;
-    color: #98971a;
+    background-color: #000000;
+    border: 0px solid #434a4c;
+    color: #b4f9f8;
 }
 
 #cpu.critical,
