--- a/hyprland/waybar/style.css
+++ b/hyprland/waybar/style.css
@@ -40,11 +40,11 @@ tooltip {
     min-width: 0;
     box-shadow: inset 0 -3px transparent;
     padding: 0px 4px;
-    color: #c3e88d;
+    color: #ffffff;
 }
 
 #workspaces button.focused {
-    color: #ddc7a1;
+    color: #ffffff;
     border-bottom: 3px solid #9ece6a;
 }
 
@@ -55,7 +55,7 @@ tooltip {
 #clock {
     background-color: #000000;
     border: 0px solid #434a4c;
-    color: #ff9e64;
+    color: #ffffff;
 }
 
 #tray {
@@ -75,7 +75,7 @@ tooltip {
 #pulseaudio {
     background-color: #000000;
     border: 0px solid #434a4c;
-    color: #b4f9f8;
+    color: #ffffff;
 }
 
 #cpu.critical,
